2016-09-25

  Released 0.1
  Initial check-in of gdeltPyR


2016-10-23
  Working on 0.1 release, basic functionality all there

2016-10-25
  Changed MANIFEST.in file; cleaned up egg.info

2016-10-30
  Edited the warning strings and aligned some code with PEP8

2016-10-31
  Added human readable CAMEO Codes column